--- a/lectures/12.html
+++ b/lectures/12.html
@@ -126,7 +126,7 @@
             </li>
         </ul>
         <p>
-            Molti sistemi come MySql nasconde il sistema delle transizioni e per cui c'è un sistema di autocommit. In questi sistemi ogni istruzione avviano una transazione, in questi database non 
+            Molti sistemi come MySql nasconde il sistema delle transazioni e per cui c'è un sistema di autocommit. In questi sistemi ogni istruzione avviano una transazione, in questi database non 
             è permesso definire una transaction ma disabilitare solo l'autocommit.
         </p>
         <code>
