--- a/lectures/21.html
+++ b/lectures/21.html
@@ -70,7 +70,7 @@
             Dimostro:
         </p>
         <p>
-            Supponiamo esistea una V->W in F tale che r non la soddisfa. Allora t1 e t2 coincidono come prima
+            Supponiamo esiste una V->W in F tale che r non la soddisfa. Allora t1 e t2 coincidono come prima
             in V ma non in W. Quindi V è sottoinsieme di X+ e W no. Per Transitività visto che F|-X->V e F|-V->W allora
             F|-X->W che contraddice il fatto che W non è sottoinsieme di X+. <br>
             Quindi r soddisfa tutte le dipendenze di r.
@@ -83,18 +83,10 @@
             Trovare un algortimo per il calcolo della chiusura è qualcosa di molto complesso, più semplice è invece trovare l'insieme X+
             cioè l'insieme di tutti quegli attributi che dipendono funzionalmente da qualche altro insieme di X di attributi.
         </p>
-    </section>
-    <section>
-        <h2>Equivalenze tra dipendenze funzionali</h2>
-        <p>
-            Siano F e G insiemi di dipendenze funzionali allora diiamo che sono equivalenti se F+=G+.
-        </p>
-        <h3>Algoritmo di equivalenza</h3>
-        <p>
-            Per ogni Y->Z in F controlliamo se essa è in G+ calcolando Y
+        <p class="italic">
+            L'algoritmo è spiegato nell'esempio dipendenze funzionali della lezione 24-25.
         </p>
     </section>
-
 </body>
 
 </html>
