--- a/lectures/23.html
+++ b/lectures/23.html
@@ -40,7 +40,7 @@
         <h1>Database</h1>
     </header>
     <section>
-        <h2>Gestione delle transizioni</h2>
+        <h2>Gestione delle transazioni</h2>
         <p>
             <span class="bold">Transazione</span> parte di programma
             caratterizzata da un inizio (<span class="bold">begin-transaction</span> e <span class="bold">start
@@ -232,8 +232,8 @@ else rollback work;
                     checkpoint
                 </p>
                 <p>
-                    Un checkpoint blocca l'esecuzione di tutte le transizioni in corso registrando
-                    le transizioni terminate e le transizioni in corso al momento del checkpoint.
+                    Un checkpoint blocca l'esecuzione di tutte le transazioni in corso registrando
+                    le transazioni terminate e le transazioni in corso al momento del checkpoint.
                 </p>
                 <ol>
                     <li>
