--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <li><a href="lectures/20.html" target="_self">Lezione 20</a> <small>(<a href="assets/Progettazione completa database.docx" target="_blank">Progettazione completa database</a>, Anomalie e assiomi di Armstrong)</small></li>
             <li><a href="lectures/21.html" target="_self">Lezione 21</a> <small>(Correttezza, completezza, lemma fondamentale)</small></li>
             <li><a href="lectures/22.html" target="_self">Lezione 22</a> <small>(Forme normali BCNF e 3NF e algoritmi per il calcolo)</small></li>
-            <li><a href="lectures/23.html" target="_self">Lezione 23</a> <small>(Gestione delle transizioni, file di log, warm e cold restart)</small></li>
-            <li><a href="lectures/24.html" target="_self">Lezione 24</a> <small>(Anomalie per transazioni concorrenti)</small></li>
+            <li><a href="lectures/23.html" target="_self">Lezione 23</a> <small>(Gestione delle transazioni, file di log, warm e cold restart)</small></li>
+            <li><a href="lectures/24-25.html" target="_self">Lezione 24-25</a> <small>(<a href="assets/Esercizio dipendenze funzionali.docx" target="_blank">Esercizio dipendenze funzionali</a> ,Anomalie per transazioni concorrenti, i lock)</small></li>
         </ul>
     </section>
 </body>
