--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Database </h1>
     </header>
     <section>
-        <h1>Lezioni</h1>
+        <h1>Lista lezioni</h1>
         <ul>
 
             <li><a href="lectures/7.html" target="_self">Lezione 7</a> <small>(interrogazione con SQL: query)</small>
@@ -40,6 +40,10 @@
             <li><a href="lectures/22.html" target="_self">Lezione 22</a> <small>(Forme normali BCNF e 3NF e algoritmi per il calcolo)</small></li>
             <li><a href="lectures/23.html" target="_self">Lezione 23</a> <small>(Gestione delle transazioni, file di log, warm e cold restart)</small></li>
             <li><a href="lectures/24-25.html" target="_self">Lezione 24-25</a> <small>(<a href="assets/Esercizio dipendenze funzionali.docx" target="_blank">Esercizio dipendenze funzionali</a> ,Anomalie per transazioni concorrenti, i lock)</small></li>
+            <li>Lezione 27-18 <small>(organizzazione fisica)</small></li>
+            <li>Lezione 29<small>(esercitazione)</small></li>
+            <li>Lezione 30<small>(esercitazione)</small></li>
+            <li><a href="lectures/31-32.html" target="_self">Lezione 31-32</a> <small>(XML)</small></li>
         </ul>
     </section>
 </body>
